--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -20,10 +20,6 @@
 
 		li {
 			list-style: none;
-
-			&:last-of-type {
-				margin-left: auto;
-			}
 		}
 
 		a {
