--- a/src/components/project/project.module.scss
+++ b/src/components/project/project.module.scss
@@ -1,12 +1,27 @@
+@use "/src/styles/mixins";
+
 .project {
     display: flex;
     flex-direction: row;
-    gap: 1.5rem;
+
+    @include mixins.breakpoint-tablet-down {
+        flex-direction: column-reverse;
+    }
 }
 
 .col_img {
     flex-basis: 50%;
     flex-shrink: 0;
+}
+
+.col_content {
+    flex-basis: 50%;
+    flex-shrink: 0;
+    padding-left: 1.5rem;
+
+    @include mixins.breakpoint-tablet-down {
+        padding: 0 0 3rem;
+    }
 }
 
 .image {
@@ -38,7 +53,8 @@
 
 .text {
     font-size: 1.5rem;
-    line-height: 1.74rem;
+    line-height: 1.75rem;
+    min-height: 3.5rem;
     margin-bottom: 1.75rem;
 }
 
@@ -52,13 +68,11 @@
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    
     text-decoration: none;
     gap: 0.375rem;
     padding: 0.5rem 1.375rem 0.6rem;
     font-size: 1.125rem;
     line-height: 1.2;
-    font-weight: 600;
     border: 1px solid var(--lightColor);
     border-radius: 1.4rem;
 
