--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -76,6 +76,10 @@
     border-radius: 3px;
   }
 
+  &::-webkit-scrollbar-corner {
+    background: transparent;
+  }
+
   &::-webkit-scrollbar-track {
       border-radius: 3px;
       background-color: var(--scrollbarTrack);
